# hello-world-python-worker

./: .gitignore  export_weights_bin.py  pyproject.toml  requests.http  wrangler.jsonc
.github/workflows/: bump-version.yml  ci.yml
src/: briscola_weights.py  entry.py  tris_weights.py
src/_weights_backup/: briscola_weights.py
tests/: conftest.py  test_examples.py
weights/: .gitignore  README.md  export_briscola.py  export_tris.py
