[project]
name = "hello-python"
version = "0.1.0"
description = "Python hello world worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi"
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "workers-py",
    "workers-runtime-sdk",
]
